--- a/office.html
+++ b/office.html
@@ -538,9 +538,8 @@
           </section>
           <div>
             <div class="mt-1 iframe-container" style="position:relative;padding-top:51.25%;">
-              <iframe name="dashboards" id="dashboards"
-                src=""
-                frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+              <iframe name="dashboards" id="dashboards" src="" frameborder="0" allowfullscreen
+                style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
             </div>
           </div>
 
@@ -974,69 +973,23 @@
             </div>
           </div>
         </div>
-        </div>
+      </div>
 
     </div>
     <!------------------------End of Incentive------------------------->
 
     <!-------------------------Start of Schedules---------------------------- -->
-    <div id="sched" class="content-tab" style="display: none">
-      <h1 class="center">Demo Calendar</h1>
+    <div id="sched" class="content-tab has-background-info-dark" style="display: none">
+      <h1 class="center has-text-white has-text-weight-bold">Dial n Dine Schedule</h1>
 
-      <div class="month">
-        <ul>
-          <li class="prev">&#10094;</li>
-          <li class="next">&#10095;</li>
-          <li>
-            August<br>
-            <span style="font-size:18px">2021</span>
-          </li>
-        </ul>
+      <div>
+        <div class="mt-1 iframe-container" style="position:relative;padding-top:56.25%;">
+          <iframe
+            src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23039BE5&amp;ctz=Africa%2FJohannesburg&amp;src=cW45MWc3MjlxcWJzYzU0aTdxZmFzMzE2NGdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%233F51B5&amp;showTz=1&amp;showCalendars=1&amp;showTabs=1&amp;showPrint=1&amp;showDate=1&amp;showNav=1&amp;showTitle=0"
+            frameborder="0" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        </div>
       </div>
 
-      <ul class="weekdays">
-        <li>Mo</li>
-        <li>Tu</li>
-        <li>We</li>
-        <li>Th</li>
-        <li>Fr</li>
-        <li>Sa</li>
-        <li>Su</li>
-      </ul>
-
-      <ul class="days">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-        <li><span class="active">10</span></li>
-        <li>11</li>
-        <li>12</li>
-        <li>13</li>
-        <li>14</li>
-        <li>15</li>
-        <li>16</li>
-        <li>17</li>
-        <li>18</li>
-        <li>19</li>
-        <li>20</li>
-        <li>21</li>
-        <li>22</li>
-        <li>23</li>
-        <li>24</li>
-        <li>25</li>
-        <li>26</li>
-        <li>27</li>
-        <li>28</li>
-        <li>29</li>
-        <li>30</li>
-        <li>31</li>
-      </ul>
     </div>
     <!-----------------------End of Schedules--------------------------->
 
