--- a/office.html
+++ b/office.html
@@ -21,8 +21,7 @@
             <span class="ml-3 navbar-item">
               <a href="./index.html" target="_blank"
                 class="button has-text-white is-size-4 is-inverted has-background-info-dark">
-                <span class="icon">
-                  <i class="fab fa-dyalog"></i></span><span>ial n' Dine</span>
+                <span><i class="fab fa-dyalog"></i>ial n' Dine</span>
               </a>
             </span>
             <span class="navbar-burger has-text-white" data-target="navbarMenuHeroB">
@@ -332,8 +331,7 @@
         <!-------------------------Dashboard Side Nav---------------------------- -->
         <div id="sidenav" class="column sidenav is-1.5 has-background-info-dark">
           <button class="button has-text-white is-medium center mb-3 mt-5 is-inverted has-background-info-dark">
-            <span class="icon">
-              <i class="fab fa-dyalog"></i></span><span>ial n' Dine</span>
+            <span><i class="fab fa-dyalog"></i>ial n' Dine</span>
           </button>
           </span>
           <aside class="menu ml-5 pt-5 ">
