--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 						<span class="navbar-item">
 							<a href="https://sands-45.github.io/dialndine-homepage/" target="_blank"
 								class="button has-text-white is-size-4 is-inverted has-background-info-dark">
-								<span class="icon">
-									<i class="fab fa-dyalog"></i>
-								</span>
-								<span>Dial n' Dine</span>
+								<span><i class="fab fa-dyalog"></i>ial n' Dine</span>
 							</a>
 						</span>
 						<span class="navbar-burger has-text-white" data-target="navbarMenuHeroB">
