--- a/office.html
+++ b/office.html
@@ -339,8 +339,7 @@
               <i class="fas fa-headset"></i>&nbsp;Agents
             </p>
             <ul class="menu-list" onclick="myFunction(event)">
-              <li class="board is-active1" onclick='document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC";
-                document.getElementById("quote").innerHTML="I hope you are having a great day 😉\!";
+              <li class="board is-active1" onclick='document.getElementById("quote").innerHTML="I hope you are having a great day 😉\!";
                 document.getElementById("subhead").innerHTML="Dashboards & Reports"'>
                 <a>Agents Overall
                   Performance</a>
@@ -357,8 +356,7 @@
               <i class="fas fa-users"></i>&nbsp;Administration
             </p>
             <ul class="menu-list" onclick="myFunction(event)">
-              <li class="board" onclick='document.getElementById("dashboards").src= "https:/\/datastudio.google.com/embed/reporting/2e1b5d10-d855-44b6-b498-953932a08a59/page/jKlQC";
-               document.getElementById("quote").innerHTML="\"Your most unhappy customers are your greatest source of learning.\" - Bill Gates📚";
+              <li class="board" onclick='document.getElementById("quote").innerHTML="\"Your most unhappy customers are your greatest source of learning.\" - Bill Gates📚";
                document.getElementById("subhead").innerHTML="Call Center Credits"'>
                 <a>Call Center Credits</a>
               </li>
